--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "openai": "^4.68.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
